<resources>
    <string name="app_name">AlwaysOn</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="time_label">Hello time</string>
    <string name="timestamp_label">Timestamp: %1$d</string>
    <string name="state_label">state_label</string>
    <string name="update_rate">Update rate: %1$d</string>
    <string name="hello_draw_count">Hello draw count</string>
    <string name="draw_count_label">Draw count: %1$d</string>
    <string name="mode_active_label">Active mode (Handler)</string>
    <string name="mode_ambient_label">Ambient Mode (Alarm)</string>
</resources>