<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".MainActivity"
    tools:deviceIds="wear">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/content_view"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_boxedEdges="all">

        <TextView
            android:id="@+id/time"
            android:textSize="@dimen/time_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_label"
            android:gravity="center"/>
        <TextView
            android:id="@+id/time_stamp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/timestamp_label"
            android:gravity="center"/>
        <TextView
            android:id="@+id/state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/state_label"
            android:gravity="center"
            android:textColor="@color/green"/>
        <TextView
            android:id="@+id/update_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_rate"
            android:gravity="center"
            android:textColor="@color/green"/>
        <TextView
            android:id="@+id/draw_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello_draw_count"
            android:gravity="center"
            android:textColor="@color/green"/>
    </LinearLayout>
</androidx.wear.widget.BoxInsetLayout>